campagne crowdfunding Cromwell

--- a/creations/cromwell/index.html
+++ b/creations/cromwell/index.html
@@ -69,24 +69,29 @@
                         </div>
                         <div class="row">
                             <div class="col mt-4">
+                                <p class="text-center"><iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/compagnie-mesdames-a/collectes/cromwell-l-experience-theatrale/widget-vignette" style="width: 300px; height: 441px; border: none;"></iframe></p>
                                 <p>Cromwell, pièce-fleuve révolutionnaire de Victor Hugo, c'est 400 pages, 6000 vers, une alternance de scènes intimes, de farce, de cour, de bouffonneries, de chansons, d'intrigues politiques et d'espionnage. Surtout un grand élan théâtral aux 80 personnages qui tissent la trame de ce jeu historique. Réputée immontable, immontée en intégralité depuis son édition en 1827, plus connue pour sa préface que pour son drame, c’est pourtant une magnifique machine à jouer.</p>
-                                <p><div class="mx-auto text-center">
-                                    <picture>
-                                        <source src="media/images/cromwell-banniere.webp" type="webp">
-                                        <img src="media/images/cromwell-banniere.jpeg" alt="baniere cromwell" class="img-fluid">
-                                    </picture>
-                                </div></p>
+                                <p>
+                                    <div class="mx-auto text-center">
+                                        <picture>
+                                            <source src="media/images/cromwell-banniere.webp" type="webp">
+                                            <img src="media/images/cromwell-banniere.jpeg" alt="baniere cromwell" class="img-fluid">
+                                        </picture>
+                                    </div>
+                                </p>
                                 <p>Pour monter ce projet nous serons six metteur.e.s en scène</p>
-                                    <ul class="liste-p">
-                                       <li>Mélanie Vayssettes et Simon Le Floc'h - <i>le club dramatique</i>,</li>
-                                       <li>Nathan Croquet - <i>Théâtre du Rocher</i>,</li>
-                                       <li>Maëva Meunier - <i>La Particule</i>,</li>
-                                       <li>Victor Ginicis - <i>Avant L'Incendie</i> et</li>
-                                       <li>Théodore Oliver - <i>MégaSuperThéâtre</i></li>
-                                    </ul>
+                                <ul class="liste-p">
+                                    <li>Mélanie Vayssettes et Simon Le Floc'h - <i>le club dramatique</i>,</li>
+                                    <li>Nathan Croquet - <i>Théâtre du Rocher</i>,</li>
+                                    <li>Maëva Meunier - <i>La Particule</i>,</li>
+                                    <li>Victor Ginicis - <i>Avant L'Incendie</i> et</li>
+                                    <li>Théodore Oliver - <i>MégaSuperThéâtre</i></li>
+                                </ul>
                                 <p>invité.e.s par Alice Tabart à venir monter chacun.e un acte de ce monstre dont elle assure la coordination et la dramaturgie générale.</p>
                                 <p class="text-end"><i><b>Durée 6h</b><br>
                                         (entractes et repas inclus)</i></p>
+                                
+                              
                             </div>
                         </div>
                     </div>
