--- a/index.html
+++ b/index.html
@@ -93,11 +93,12 @@
 </p> -->
                         </div>
                         <div class="col-md-3 col-xl-3 bouttonsoutien">
-                            <a href="https://www.helloasso.com/associations/compagnie-mesdames-a/adhesions/adhesion-cie-mesdames-a-2024/" class="btn btn-danger btn-adhesion" role="button"> <span class="txt-nous-soutenir">Nous soutenir</span><br>
-                                <span class="txt-nous-soutenir-small">(Soutien et adhésion)</span></a>
+                            <!-- <a href="https://www.helloasso.com/associations/compagnie-mesdames-a/adhesions/adhesion-cie-mesdames-a-2024/" class="btn btn-danger btn-adhesion" role="button"> <span class="txt-nous-soutenir">Nous soutenir</span><br>
+                                <span class="txt-nous-soutenir-small">(Soutien et adhésion)</span></a> -->
                             <!-- <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modal-soutenir-adhesion">    
                             </button>-->
-                            <br>
+                            <!-- <br> -->
+                            <a href="https://www.helloasso.com/associations/compagnie-mesdames-a/collectes/cromwell-l-experience-theatrale" class="btn btn-danger btn-adhesion" role="button"> <span class="txt-nous-soutenir">Contribuer à <i>CROMWELL</i></span><br></a>
                         </div>
                     </div>
                 </div>
@@ -404,7 +405,7 @@
                         <div class="row row-cols-1 row-cols-md-2 g-4 mb-4">
                             <div class="col">
                                 <!-- cromwell -->
-                                <div class="card h-100 card-commencement border-secondary bg-transparent text-white mb-3">
+                                <div class="card h-100 card-cromwell border-secondary bg-transparent text-white mb-3">
                                     <img class="card-img-top" src="creations/cromwell/media/images/cromwell-banniere-4-3-bg.webp" alt="eclairs-jeu">
                                     <div class="card-img-overlay d-flex flex-column">
                                         <h4 class="card-title titre-creations-cards"><i>Cromwell</i></h4>
@@ -438,6 +439,9 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row">
+    <p class="text-center"><iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/compagnie-mesdames-a/collectes/cromwell-l-experience-theatrale/widget-vignette" style="width: 300px; height: 441px; border: none;"></iframe></p>
+</div>
                         <div class="row row-cols-1 row-cols-md-2 row-cols-xxl-3 g-4">
                             <div class="col">
                                 <!-- eclairs -->
@@ -577,11 +581,11 @@
                         <div class="col-sm-8 col-xxl-6">
                             <p>Elle est née en 2010 de l'envie d'une dizaine de jeunes artistes toulousain.e.s.<br>Leur objectif dès le départ se situait à la rencontre entre la création contemporaine (théâtre, musique, danse) et la recherche, ainsi que dans une perspective résolue de diffusion pour le plus grand nombre à la fois en lieux de théâtre repérés et en milieux éloignés de l'offre culturelle.</p>
                         </div>
-                            <div class="col-sm-4 col-xxl-6">
-                                <!-- <img id="logo" src="media/images/LogoCompagnieMaDark.svg"> -->
-                                <img id="logo" src="media/images/LogoCompagnieMa.svg">
-                            </div>
-                            <div class="col-sm-8 col-xxl-6">
+                        <div class="col-sm-4 col-xxl-6">
+                            <!-- <img id="logo" src="media/images/LogoCompagnieMaDark.svg"> -->
+                            <img id="logo" src="media/images/LogoCompagnieMa.svg">
+                        </div>
+                        <div class="col-sm-8 col-xxl-6">
                             <p>
                                 Des créations inter-disciplinaires brassées par nos enjeux contemporains inscrites dans un vrai parcours de démocratisation culturelle.<br>
                                 Cette double philosophie nous a conduit sur les routes de l'Occitanie (et au-delà) avec des projets qui, sous la houlette d'Alice Tabart, dessinent une dramaturgie de l'histoire, à destination d'un réel tout public.
