script google analytics

--- a/creations/cromwell/index.html
+++ b/creations/cromwell/index.html
@@ -2,6 +2,15 @@
 <html lang="fr" data-bs-theme="dark">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MBBDMBMJEW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-MBBDMBMJEW');
+    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,7 +19,7 @@
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="cromwell, victor hugo, mesdames a, pièce, théâtre, theatre, contemporain, spectacle, art, Alice Tabart, Tabart, Séverac, chateau, spectacle, chant, danse, compagnie, troupe">
     <meta name="theme-color" content="#000000">
-    <title>Le Commencement - Mesdames A</title>
+    <title>Cromwell - Mesdames A</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
@@ -45,7 +54,7 @@
                     <div class="jumbotron cromwell jumbotron-fluid">
                         <div class="row">
                             <div class="col-md-6">
-                                <!-- <h1 class="display-4">Le Commencement</h1> -->
+                                <!-- <h1 class="display-4">Cromwell</h1> -->
                                 <h1>Cromwell</h1>
                             </div>
                             <div class="col-md-6">
@@ -57,7 +66,7 @@
                     <div class="creations cromwell" id="cromwell">
                         <!-- <div class="row">
                             <div class="col-md-6">
-                                <h1>Le Commencement</h1>
+                                <h1>Cromwell</h1>
                             </div>
                             <div class="col-md-6">
                                 <p class="text-md-end"><small><i>Saisons 2022/23 et 2023/24</i></small></p>
@@ -97,28 +106,28 @@
                     </div>
                     <!-- <h2>Galerie</h2> -->
                     <div id="galcromwell" class="hidden mt-4">
-                        <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="media/images/05-cromwell-xl-coline-slide-dsc-9666.jpg" title="Le Commencement - Tyrolienne">
-                            <img src="media/images/05-cromwell-sm-coline-slide-dsc-9666.jpg" alt="Le Commencement - Tyrolienne" width="24%" class="img-thumbnail">
+                        <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="media/images/05-cromwell-xl-coline-slide-dsc-9666.jpg" title="Cromwell - Tyrolienne">
+                            <img src="media/images/05-cromwell-sm-coline-slide-dsc-9666.jpg" alt="Cromwell - Tyrolienne" width="24%" class="img-thumbnail">
                         </a>
-                        <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="media/images/06-cromwell-xl-alice-coline-dsc-9684.jpg" title="Le Commencement - Astronautes Alice Coline">
-                            <img src="media/images/06-cromwell-sm-alice-coline-dsc-9684.jpg" alt="Le Commencement - Astronautes Alice Coline" width="24%" class="img-thumbnail">
+                        <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="media/images/06-cromwell-xl-alice-coline-dsc-9684.jpg" title="Cromwell - Astronautes Alice Coline">
+                            <img src="media/images/06-cromwell-sm-alice-coline-dsc-9684.jpg" alt="Cromwell - Astronautes Alice Coline" width="24%" class="img-thumbnail">
                         </a>
-                        <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="media/images/01-cromwell-xl-jmsahuquet.jpg" title="Le Commencement - Vue ensemble" class="text-white">
-                            <img src="media/images/01-cromwell-sm-jmsahuquet.jpg" alt="Le Commencement - Vue ensemble" width="24%" class="img-thumbnail">
+                        <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="media/images/01-cromwell-xl-jmsahuquet.jpg" title="Cromwell - Vue ensemble" class="text-white">
+                            <img src="media/images/01-cromwell-sm-jmsahuquet.jpg" alt="Cromwell - Vue ensemble" width="24%" class="img-thumbnail">
                         </a>
-                        <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="media/images/03-cromwell-xl-juliemachu.jpg" title="Le Commencement - Ruines">
-                            <img src="media/images/03-cromwell-sm-juliemachu.jpg" alt="Le Commencement - Ruines" width="24%" class="img-thumbnail">
+                        <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="media/images/03-cromwell-xl-juliemachu.jpg" title="Cromwell - Ruines">
+                            <img src="media/images/03-cromwell-sm-juliemachu.jpg" alt="Cromwell - Ruines" width="24%" class="img-thumbnail">
                         </a>
-                        <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="media/images/02-cromwell-xl-jmsahuquet.jpg" title="Le Commencement - mouvement" class="text-white">
-                            <img src="media/images/02-cromwell-sm-jmsahuquet.jpg" alt="Le Commencement - mouvement" width="24%" class="img-thumbnail">
+                        <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="media/images/02-cromwell-xl-jmsahuquet.jpg" title="Cromwell - mouvement" class="text-white">
+                            <img src="media/images/02-cromwell-sm-jmsahuquet.jpg" alt="Cromwell - mouvement" width="24%" class="img-thumbnail">
                         </a>
-                        <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="media/images/04-cromwell-xl-juliemachu.jpg" title="Le Commencement - Dessin">
-                            <img src="media/images/04-cromwell-sm-juliemachu.jpg" alt="Le Commencement - Dessin" width="24%" class="img-thumbnail">
+                        <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="media/images/04-cromwell-xl-juliemachu.jpg" title="Cromwell - Dessin">
+                            <img src="media/images/04-cromwell-sm-juliemachu.jpg" alt="Cromwell - Dessin" width="24%" class="img-thumbnail">
                         </a>
-                        <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="media/images/07-cromwell-xl-alice-lea-sax-indoor.jpg" title="Le Commencement - Saxophone indoor">
-                            <img src="media/images/07-cromwell-sm-alice-lea-sax-indoor.jpg" alt="Le Commencement - Saxophone indoor.jpg" width="24%" class="img-thumbnail">
+                        <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="media/images/07-cromwell-xl-alice-lea-sax-indoor.jpg" title="Cromwell - Saxophone indoor">
+                            <img src="media/images/07-cromwell-sm-alice-lea-sax-indoor.jpg" alt="Cromwell - Saxophone indoor.jpg" width="24%" class="img-thumbnail">
                         </a>
-                        <!--  <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="https://player.vimeo.com/video/182463716" title="Le Commencement - vidéo Vimeo">
+                        <!--  <a data-gallery="#blueimp-gallery-galcromwell" data-toggle="lightbox" href="https://player.vimeo.com/video/182463716" title="Cromwell - vidéo Vimeo">
                             <img srcset="https://vumbnail.com/182463716.jpg 640w, https://vumbnail.com/182463716_large.jpg 640w, https://vumbnail.com/182463716_medium.jpg 200w, https://vumbnail.com/182463716_small.jpg 100w" width="24%" src="https://vumbnail.com/182463716.jpg" alt="Vimeo Thumbnail" class="img-thumbnail">
                         </a> -->
                     </div>
@@ -207,7 +216,7 @@
                             </div>
                         </div>
                         <!--                 <div class="col-auto col-md-4 mx-auto">
-                            <a data-gallery="#blueimp-gallery-Affichecromwell" data-toggle="lightbox" href="media/images/00-affiche-cromwell.png_960.webp" title="Le Commencement - Poursuite" class="text-white">
+                            <a data-gallery="#blueimp-gallery-Affichecromwell" data-toggle="lightbox" href="media/images/00-affiche-cromwell.png_960.webp" title="Cromwell - Poursuite" class="text-white">
                                 <picture>
                                     <source src="media/images/00-affiche-cromwell.png_720.webp" type="">
                                 </picture>
