--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="fr" data-bs-theme="dark">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MBBDMBMJEW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-MBBDMBMJEW');
+    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -440,8 +449,8 @@
                             </div>
                         </div>
                         <div class="row">
-    <p class="text-center"><iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/compagnie-mesdames-a/collectes/cromwell-l-experience-theatrale/widget-vignette" style="width: 300px; height: 441px; border: none;"></iframe></p>
-</div>
+                            <p class="text-center"><iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/compagnie-mesdames-a/collectes/cromwell-l-experience-theatrale/widget-vignette" style="width: 300px; height: 441px; border: none;"></iframe></p>
+                        </div>
                         <div class="row row-cols-1 row-cols-md-2 row-cols-xxl-3 g-4">
                             <div class="col">
                                 <!-- eclairs -->
