--- a/creations/commencement/index.html
+++ b/creations/commencement/index.html
@@ -162,7 +162,11 @@
                             <div class="dates-passees">
                                 <ul>
                                     <li><b>2024</b></li>
-                                    <li>- 18 mai : Archéosite de Montans (81)</li>
+                                    <li>- 18 mai : Archéosite de Montans (81)</li><br>
+                                    <li><b>2023</b></li>
+                                    <li>- 17 juillet, 22 août : Château de Sévérac d'Aveyron (12)</li><br>
+                                    <li><b>2022</b></li>
+                                    <li>- 20 octobre : Maison des Dolmens de Buzeins, Sévérac d'Aveyron (12)</li>
                                     <!-- <br>
                                     <li><b>2013</b></li>
                                     <li>- 1er juin : Halles de Villasavary - Aude</li>
