Cromwell - collecte enleve

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             <p class="intro-text text-center">En 23/24, la compagnie, poursuit la diffusion du <a class="link-creation" href="creations/commencement/index.html"><i>Commencement</i></a> et se lance dans un projet-fleuve&nbsp;: monter pour la première fois <a href="creations/cromwell/index.html" class="link-creation"><i>CROMWELL</i></a> de Victor Hugo.</p><br>
                             <!-- <p>Prochaines dates</p> -->
                             <ul class="text-white ">
-                                <li class=""><i>Le Commencement</i> le 18 mai à Montans (81)</li>
+                                <!-- <li class=""><i>Le Commencement</i> le 18 mai à Montans (81)</li> -->
                                 <li class=""><i>Cromwell</i> les 12, 14 et 16 août au Château de Sévérac (12)</li>
                             </ul>
                             <!-- <p class="intro-text text-center">
@@ -123,12 +123,12 @@
 </p> -->
                         </div>
                         <div class="col-md-3 col-xl-3 bouttonsoutien">
-                            <!-- <a href="https://www.helloasso.com/associations/compagnie-mesdames-a/adhesions/adhesion-cie-mesdames-a-2024/" class="btn btn-danger btn-adhesion" role="button"> <span class="txt-nous-soutenir">Nous soutenir</span><br>
-                                <span class="txt-nous-soutenir-small">(Soutien et adhésion)</span></a> -->
+                            <a href="https://www.helloasso.com/associations/compagnie-mesdames-a/adhesions/adhesion-cie-mesdames-a-2024/" class="btn btn-danger btn-adhesion" role="button"> <span class="txt-nous-soutenir">Nous soutenir</span><br>
+                                <span class="txt-nous-soutenir-small">(Soutien et adhésion)</span></a>
                             <!-- <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modal-soutenir-adhesion">    
                             </button>-->
                             <!-- <br> -->
-                            <a href="https://www.helloasso.com/associations/compagnie-mesdames-a/collectes/cromwell-l-experience-theatrale" class="btn btn-danger btn-adhesion" role="button"> <span class="txt-nous-soutenir">Contribuer à <i>CROMWELL</i></span><br></a>
+                            <!-- <a href="https://www.helloasso.com/associations/compagnie-mesdames-a/collectes/cromwell-l-experience-theatrale" class="btn btn-danger btn-adhesion" role="button"> <span class="txt-nous-soutenir">Contribuer à <i>CROMWELL</i></span><br></a> -->
                         </div>
                     </div>
                 </div>
@@ -469,9 +469,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
+                        <!-- <div class="row">
                             <p class="text-center"><iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/compagnie-mesdames-a/collectes/cromwell-l-experience-theatrale/widget-vignette" style="width: 300px; height: 441px; border: none;"></iframe></p>
-                        </div>
+                        </div> -->
                         <div class="row row-cols-1 row-cols-md-2 row-cols-xxl-3 g-4">
                             <div class="col">
                                 <!-- eclairs -->
