--- a/creations/cromwell/index.html
+++ b/creations/cromwell/index.html
@@ -17,7 +17,7 @@
     <meta name="description" content="Cromwell - Création la compagnie Mesdames A, compagnie de théâtre contemporain basée à Toulouse. Dirigée par Alice Tabart.">
     <meta name="author" content="Alice Tabart, Gilles Tabart">
     <meta name="robots" content="index, follow">
-    <meta name="keywords" content="cromwell, victor hugo, mesdames a, pièce, théâtre, theatre, contemporain, spectacle, art, Alice Tabart, Tabart, Séverac, chateau, spectacle, chant, danse, compagnie, troupe">
+    <meta name="keywords" content="cromwell, victor hugo, première, première mondiale, aveyron, été 2024, août 2024, évènement, culture, mesdames a, pièce, théâtre, theatre, spectacle, Alice Tabart, Tabart, Sévérac le chateau, Séverac, chateau, spectacle, chant, Hugo, play, cité médiévale">
     <meta name="theme-color" content="#000000">
     <title>Cromwell - Mesdames A</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -78,7 +78,7 @@
                         </div>
                         <div class="row">
                             <div class="col mt-4">
-                                <p class="text-center"><iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/compagnie-mesdames-a/collectes/cromwell-l-experience-theatrale/widget-vignette" style="width: 300px; height: 441px; border: none;"></iframe></p>
+                                <!-- <p class="text-center"><iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/compagnie-mesdames-a/collectes/cromwell-l-experience-theatrale/widget-vignette" style="width: 300px; height: 441px; border: none;"></iframe></p> -->
                                 <p>Cromwell, pièce-fleuve révolutionnaire de Victor Hugo, c'est 400 pages, 6000 vers, une alternance de scènes intimes, de farce, de cour, de bouffonneries, de chansons, d'intrigues politiques et d'espionnage. Surtout un grand élan théâtral aux 80 personnages qui tissent la trame de ce jeu historique. Réputée immontable, immontée en intégralité depuis son édition en 1827, plus connue pour sa préface que pour son drame, c’est pourtant une magnifique machine à jouer.</p>
                                 <p>
                                     <div class="mx-auto text-center">
