--- a/index.html
+++ b/index.html
@@ -111,11 +111,14 @@
                 <div class="col-sm-10 offset-sm-1">
                     <div class="row">
                         <div class="col-md-9 col-xl-7 offset-xl-2">
-                            <p class="intro-text text-center">En 23/24, la compagnie, poursuit la diffusion du <a class="link-creation" href="creations/commencement/index.html"><i>Commencement</i></a> et se lance dans un projet-fleuve&nbsp;: monter pour la première fois <a href="creations/cromwell/index.html" class="link-creation"><i>CROMWELL</i></a> de Victor Hugo.</p><br>
+                            <p class="intro-text text-center">En 23/24, la compagnie, poursuit la diffusion du <a class="link-creation" href="creations/commencement/index.html"><i>Commencement</i></a> et monte pour la première fois <a href="creations/cromwell/index.html" class="link-creation"><i>CROMWELL</i></a> de Victor Hugo.</p><br>
                             <!-- <p>Prochaines dates</p> -->
                             <ul class="text-white ">
                                 <!-- <li class=""><i>Le Commencement</i> le 18 mai à Montans (81)</li> -->
-                                <li class=""><i>Cromwell</i> les 12, 14 et 16 août au Château de Sévérac (12)</li>
+                                <li class=""><i>Cromwell</i> les 12, 14 et 16 août au Château de Sévérac (12)<br>
+                                    <a class="action-link" href="https://www.severacdaveyron.fr/premiere-mondiale-au-chateau-de-severac-cromwell-de-victor-hugo/">Infos et réservations</a>
+                                    <i class="fa-solid fa-ticket fa-rotate-by fa-xl" style="color: #FFD43B; --fa-rotate-angle: -25deg;"></i>
+                                    </li>
                             </ul>
                             <!-- <p class="intro-text text-center">
     <br>Découvrez nos <a href="./creations/voyages/index.html"><i>Voyages dans le temps</i></a> et <a href="creations/commencement/index.html"><i>Le Commencement</i></a>.
