Info et resa ajout

--- a/creations/cromwell/index.html
+++ b/creations/cromwell/index.html
@@ -99,6 +99,8 @@
                                 <p>invité.e.s par Alice Tabart à venir monter chacun.e un acte de ce monstre dont elle assure la coordination et la dramaturgie générale.</p>
                                 <p class="text-end"><i><b>Durée 6h</b><br>
                                         (entractes et repas inclus)</i></p>
+
+                                        <p><i class="fa-solid fa-circle-info fa-lg" style="color: #fff;"></i> <a class="action-link" href="https://www.severacdaveyron.fr/premiere-mondiale-au-chateau-de-severac-cromwell-de-victor-hugo/">Infos et réservations</a> <i class="fa-solid fa-ticket fa-rotate-by fa-lg" style="color: #FFD43B; --fa-rotate-angle: -25deg;"></i></p>
                                 
                               
                             </div>
@@ -200,6 +202,9 @@
                                 <ul>
                                     <li><b>2024</b></li>
                                     <li>- 12, 14 et 16 août : Château de Sévérac d'Aveyron (12)</li>
+                                    <ul>
+                                        <li><a class="action-link" href="https://www.severacdaveyron.fr/premiere-mondiale-au-chateau-de-severac-cromwell-de-victor-hugo/">Infos et réservations</a> <i class="fa-solid fa-ticket fa-rotate-by fa-lg" style="color: #FFD43B; --fa-rotate-angle: -25deg;"></i></li>
+                                    </ul>
                                     <!-- <br>
                                     <li><b>2013</b></li>
                                     <li>- 1er juin : Halles de Villasavary - Aude</li>
@@ -215,14 +220,14 @@
                                 </ul>
                             </div>
                         </div>
-                        <!--                 <div class="col-auto col-md-4 mx-auto">
-                            <a data-gallery="#blueimp-gallery-Affichecromwell" data-toggle="lightbox" href="media/images/00-affiche-cromwell.png_960.webp" title="Cromwell - Poursuite" class="text-white">
+                        <div class="col-auto col-md-4 mx-auto">
+                            <a data-gallery="#blueimp-gallery-Affichecromwell" data-toggle="lightbox" href="media/images/affiche-cromwell.png_960.webp" title="Cromwell - Poursuite" class="text-white">
                                 <picture>
-                                    <source src="media/images/00-affiche-cromwell.png_720.webp" type="">
+                                    <source src="media/images/affiche-cromwell.png_720.webp" type="">
                                 </picture>
-                                <img src="media/images/00-affiche-cromwell.jpeg" alt="Commencement Affiche" class="img-fluid affiche-cromwell">
+                                <img src="media/images/photos-origine/affiche-cromwell.png" alt="Commencement Affiche" class="img-fluid affiche-cromwell">
                             </a>
-                        </div> -->
+                        </div>
                     </div>
                     <!-- <h2>Revue de presse</h2> -->
                     <div class="hidden row">
