--- a/index.html
+++ b/index.html
@@ -111,15 +111,21 @@
                 <div class="col-sm-10 offset-sm-1">
                     <div class="row">
                         <div class="col-md-9 col-xl-7 offset-xl-2">
-                            <p class="intro-text text-center">En 23/24, la compagnie, poursuit la diffusion du <a class="link-creation" href="creations/commencement/index.html"><i>Commencement</i></a> et monte pour la première fois <a href="creations/cromwell/index.html" class="link-creation"><i>CROMWELL</i></a> de Victor Hugo.</p><br>
+                            <p class="intro-text text-center">En 23/24, la compagnie poursuit la diffusion du <a class="link-creation" href="creations/commencement/index.html"><i>Commencement</i></a> et monte <a href="creations/cromwell/index.html" class="link-creation"><i>CROMWELL</i></a> de Victor Hugo.
+                            <br><br>
+                            <strong><i>Cromwell</i></strong>: <a class="action-link" href="https://www.severacdaveyron.fr/premiere-mondiale-au-chateau-de-severac-cromwell-de-victor-hugo/">Infos et réservations</a>
+                                <i class="fa-solid fa-ticket fa-rotate-by fa-xl" style="color: #FFD43B; --fa-rotate-angle: -25deg;"></i> <br>
+                                12, 14 et 16 août, Château de Sévérac (Aveyron)
+                                </p>
                             <!-- <p>Prochaines dates</p> -->
-                            <ul class="text-white ">
-                                <!-- <li class=""><i>Le Commencement</i> le 18 mai à Montans (81)</li> -->
-                                <li class=""><i>Cromwell</i> les 12, 14 et 16 août au Château de Sévérac (12)<br>
-                                    <a class="action-link" href="https://www.severacdaveyron.fr/premiere-mondiale-au-chateau-de-severac-cromwell-de-victor-hugo/">Infos et réservations</a>
-                                    <i class="fa-solid fa-ticket fa-rotate-by fa-xl" style="color: #FFD43B; --fa-rotate-angle: -25deg;"></i>
-                                    </li>
-                            </ul>
+                            <!-- <ul class="text-white ">
+                                <li class=""><i>Le Commencement</i> le 18 mai à Montans (81)</li>
+                                <li class=""><i>Cromwell</i>
+                                    <ul>
+                                        <li>12, 14 et 16 août, Château de Sévérac (Aveyron)</li>
+                                    </ul>
+                                </li>
+                            </ul> -->
                             <!-- <p class="intro-text text-center">
     <br>Découvrez nos <a href="./creations/voyages/index.html"><i>Voyages dans le temps</i></a> et <a href="creations/commencement/index.html"><i>Le Commencement</i></a>.
     https://www.millavois.com/2023/08/14/severac-le-commencement-un-spectacle-entre-histoire-et-science-fiction-qui-vous-fera-redecouvrir-le-chateau/
@@ -133,6 +139,9 @@
                             <!-- <br> -->
                             <!-- <a href="https://www.helloasso.com/associations/compagnie-mesdames-a/collectes/cromwell-l-experience-theatrale" class="btn btn-danger btn-adhesion" role="button"> <span class="txt-nous-soutenir">Contribuer à <i>CROMWELL</i></span><br></a> -->
                         </div>
+                        <p class="">
+                                
+                            </p>    
                     </div>
                 </div>
             </div>
