--- a/creations/voyages/index.html
+++ b/creations/voyages/index.html
@@ -91,30 +91,30 @@
                         <div class="hidden ratio ratio-16x9">
                             <iframe src="https://www.youtube.com/embed/cIMh0o2Rmq8" title="Voyages dans le temps"></iframe>
                         </div>
-                        <h2>Les Voyages</h2>
+                        <!-- <h2>Les Voyages</h2> -->
                         <div class="clearfix">
-                            <h3>À la Rencontre des sorcières</h3>
+                            <h2>À la Rencontre des sorcières</h2>
                             <img src="media/images/animation-sorcieres.jpg" class="col-sm-5 float-sm-end mb-3 ms-sm-3 img-fluid" alt="Sorcières">
                             <p>Remontez le temps accompagnés de drôles de savantes et partez à la découverte des soins et croyances du Moyen-Âge : certaines de leurs bizarreries pourraient bien guérir nos maux actuels !</p>
                         </div>
                         <div class="clearfix">
-                            <h3>Vie précieuse au château</h3>
+                            <h2>Vie précieuse au château</h2>
                             <img src="media/images/vie-de-faste-17eme2-2.jpg" class="col-sm-5 float-sm-start mb-3 me-sm-3 img-fluid" alt="Vie de faste 17ème">
                             <p>Pourquoi faut-il lire Molière avec l'accent Québécois ? Pourquoi écrit-on asthme, et pas asme ? Pourquoi portait-on un vertugadin ? Et d'ailleurs, c'est quoi ? <br>
                                 Partez à la rencontre des résidents du château en plein âge d'or : costumes, musique et inventions : découvrez les origines du classicisme français !</p>
                         </div>
                         <div class="clearfix">
-                            <h3>Jour de fête au Château</h3>
+                            <h2>Jour de fête au Château</h2>
                             <img src="media/images/danses-2.jpg" class="col-sm-5 float-sm-end mb-3 ms-sm-3 img-fluid" alt="Danses">
                             <p>Plongez dans un panorama vivant et insolite des divertissements au Moyen-Âge : chants et danses vous entraîneront notamment à la découverte des joies de l’art troubadour. Une initiation qui permet de redécouvrir l’histoire de façon conviviale !</p>
                         </div>
                         <div class="clearfix">
-                            <h3>Drôle de Vie au Moyen-âge</h3>
+                            <h2>Drôle de Vie au Moyen-âge</h2>
                             <img src="media/images/cuisine.jpg" class="col-sm-5 float-sm-start mb-3 me-sm-3 img-fluid" alt="Cuisine">
                             <p>Rendez-vous au Moyen-âge pour suivre deux villageois.e dans un parcours qui vous en mettra plein la vue, l'ouïe, l'odorat et même peut-être vous donnera le goût de la vie populaire au cœur de la cité médiévale !</p>
                         </div>
                         <div class="clearfix">
-                            <h3>L'Art des banquets à la Renaissance</h3>
+                            <h2>L'Art des banquets à la Renaissance</h2>
                             <img src="media/images/espices.jpg" class="col-sm-5 float-sm-end mb-3 ms-sm-3 img-fluid" alt="Gentes Dames - Épices">
                             <p>Les gentes dames du château vous font découvrir l’art de la fête pendant la Renaissance. Entre une cuisine fleurie ou épicée, des animaux surprises et histoires incroyables, plongez-vous dans l’atmosphère du XVIème siècle !</p>
                         </div>
